# CMakeParser

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
cmake/: CMakeParserConfig.cmake.in  External_Catch.cmake  External_expected.cmake  External_fmt.cmake  Superbuild.cmake
src/: ArgumentParser.cpp  ArgumentParser.hpp  ArgumentsParser.cpp  ArgumentsParser.hpp  BracketArgumentParser.cpp  BracketArgumentParser.hpp  BracketCloseParser.cpp  BracketCloseParser.hpp  BracketCommentParser.cpp  BracketCommentParser.hpp  BracketContentParser.cpp  BracketContentParser.hpp  BracketOpenParser.cpp  BracketOpenParser.hpp  CMakeLists.txt  CommandInvocationParser.cpp  CommandInvocationParser.hpp  CommonErrors.cpp  CommonErrors.hpp  ElementType.hpp  Error.cpp  Error.hpp  ErrorPrinter.cpp  ErrorPrinter.hpp  EscapeEncodedParser.cpp  EscapeEncodedParser.hpp  EscapeIdentityParser.cpp  EscapeIdentityParser.hpp  EscapeSemiliconParser.cpp  EscapeSemiliconParser.hpp  EscapeSequenceParser.cpp  EscapeSequenceParser.hpp  FileElementParser.cpp  FileElementParser.hpp  FileParser.cpp  FileParser.hpp  IdentifierParser.cpp  IdentifierParser.hpp  LineCommentParser.cpp  LineCommentParser.hpp  (+24 more)
tests/: ArgumentParser_tests.cpp  ArgumentsParser_tests.cpp  BracketArgumentParser_tests.cpp  BracketCloseParser_tests.cpp  BracketCommentParser_tests.cpp  BracketContentParser_tests.cpp  BracketOpenParser_tests.cpp  CMakeLists.txt  CommandInvocationParser_tests.cpp  EscapeEncodedParser_tests.cpp  EscapeIdentityParser_tests.cpp  EscapeSemiliconParser_tests.cpp  EscapeSequenceParser_tests.cpp  FileElementParser_tests.cpp  FileParser_tests.cpp  IdentifierParser_tests.cpp  LineCommentParser_tests.cpp  LineEndingParser_tests.cpp  NewLineParser_tests.cpp  QuotedArgumentParser_tests.cpp  QuotedContinuationParser_tests.cpp  QuotedElementParser_tests.cpp  SeparatedArgumentsParser_tests.cpp  SeparationParser_tests.cpp  SpaceParser_tests.cpp  UnquotedArgumentParser_tests.cpp  UnquotedElementParser_tests.cpp
